# folio

./: .gitignore  README.md  gui_spec.md  pyproject.toml  v1_spec.md
gui/FolioTauri/: README.md  index.html  package-lock.json  package.json
gui/FolioTauri/src/: main.js
gui/FolioTauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/FolioTauri/src-tauri/icons/: icon.icns
gui/FolioTauri/src-tauri/src/: main.rs
helpers/keychain-helper/: Package.swift
helpers/keychain-helper/Sources/folio-keychain-helper/: main.swift
schemas/events/v1/: envelope.json  error.json  init.completed.json
scripts/: make_icns.sh
src/folio/: __main__.py  cli.py
tests/: test_jsonl_contract.py
