[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folio-cli"
version = "0.1.0"
description = "Folio local-first document CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1,<9",
  "cryptography>=43,<45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "jsonschema>=4.0,<5",
  "ruff>=0.6,<1",
]

[project.scripts]
folio = "folio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
